--- a/Hedland.html
+++ b/Hedland.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>Fremantle</title>
+  <title>Hedland</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,8 +44,8 @@
     <th>Colour Enhanced Images</th>
   </tr>
   <tr>
-    <td></a></td>
-    <td> </a></td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
     <td> <a><img src="fig/PortHed1.gif" alt="" width=400 /></a></td>
