--- a/Sydney.html
+++ b/Sydney.html
@@ -32,7 +32,7 @@
 	  <div class="content">
 	    
 	    
-<h4><font color="orange" id="landchange">Land Change of Sydney Port, VIC, 1986-2020</font></h4>
+<h4><font color="orange" id="landchange">Land Change of Sydney Port, NSW, 1986-2020</font></h4>
 
 
 
