--- a/Fremantle.html
+++ b/Fremantle.html
@@ -34,8 +34,8 @@
 	    
 <h4><font color="orange" id="landchange">Land Change of Fremantle Port, WA, 1986-2020</font></h4>
 
-
-
+<br /><br />
+Please click [here](https://songyzzack.users.earthengine.app/view/fremantle-vegetation) to find the interactive website of vegetation change at Fremantle and neighbour regions. 
 <br /><br />
 
 <table>
