--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
 
 	  <div class="content">
+
+<h3><font color="orange" id="landchange">Land Cover and Land Use Change at Fremantle Ports, 1987-2020</font></h3>
+		 
+<style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><small><a href="//learngis3.maps.arcgis.com/apps/Embed/index.html?webmap=bd07ebe2148b466190c5bf9c3e0e4d70&extent=115.7215,-32.0565,115.764,-32.0357&home=true&zoom=true&scale=true&search=true&searchextent=true&details=true&legend=true&active_panel=details&basemap_gallery=true&disable_scroll=true&theme=light" style="color:#0000FF;text-align:left" target="_blank">View larger map</a></small><br><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Land Cover at Fremantle Ports" src="//learngis3.maps.arcgis.com/apps/Embed/index.html?webmap=bd07ebe2148b466190c5bf9c3e0e4d70&extent=115.7215,-32.0565,115.764,-32.0357&home=true&zoom=true&previewImage=true&scale=true&search=true&searchextent=true&details=true&legend=true&active_panel=details&basemap_gallery=true&disable_scroll=true&theme=light"></iframe></div>
 	    
 	    
 <h3><font color="orange" id="landchange">Land Change of Ports in Australia, 1986-2020</font></h3>
